--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -2,11 +2,11 @@
 
 \section{Forschungsfrage}
 
-Welche Auswirkungen haben Kraftfahrzeuge auf die Umwelt und wie kann autonomes Fahren die negativen Auswirkungen reduzieren?
+Welche Auswirkungen haben \acfp{Kfz} auf die Umwelt und wie kann autonomes Fahren die negativen Auswirkungen reduzieren?
 
 \section{Hypothese}
 
-Je mehr Fahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelastung durch Kfz aus.
+Je mehr \aclp{Kfz} autonom fahren, desto geringer fällt die Feinstaubbelastung durch \acfp{Kfz} aus.
 
 
 
@@ -24,13 +24,13 @@ Je mehr Fahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelastung d
 -Umweltbelastung durch LKW
 
 \section{Definitionen}
-\subsection{Kraftfahrzeuge}
+\subsection{\acfp{Kfz}}
 
 \textit{Als Kraftfahrzeuge im Sinne dieses Gesetzes gelten Landfahrzeuge, die durch Maschinenkraft bewegt werden, ohne an Bahngleise gebunden zu sein.}
 \footnote{Straßenverkehrsgesetz, § 1 Abs. 2}
 \vspace{0.5cm}
 \newline
-Kraftfahrzeuge können in folgende Kategorien eingeteilt werden\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
+\aclp{Kfz} können in folgende Kategorien eingeteilt werden\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
 	vom 14. Juli 2011, TEIL A ABS.1 - https://eur-lex.europa.eu/eli/reg/2011/678/oj?locale=de}:
 \begin{itemize}
 	\item Klasse M (Vorwiegend für die Beförderung von Fahrgästen und deren Gepäck ausgelegte und gebaute Kraftfahrzeuge)
@@ -108,23 +108,27 @@ In der Stufe 5 (Vollautomatisierung):
 
 \subsection{Umwelteinflüsse}
 
-\textit{Umwelt bezeichnet etwas, mit dem ein Lebewesen (oder etwas, das in Analogie zu einem Lebewesen behandelt wird) in kausalen Beziehungen steht. Der Umweltbegriff ist zu unterscheiden vom Begriff der Umgebung, der räumlich (und nicht kausal) definiert ist.}\footnote{Ludwig Trepl: Allgemeine Ökologie. Band 1: Organismus und Umwelt. Frankfurt/M., Lang: 106ff.; vgl. 1. Uexküll, Jakob von 1909: Umwelt und Innenwelt der Tiere. Springer, Berlin 2005.}
+\textit{Umwelt bezeichnet etwas, mit dem ein Lebewesen in Beziehungen steht.}\footnote{Ludwig Trepl: Allgemeine Ökologie. Band 1: Organismus und Umwelt. Frankfurt/M., Lang: 106ff.; vgl. 1. Uexküll, Jakob von 1909: Umwelt und Innenwelt der Tiere. Springer, Berlin 2005.}
 
 Einfluss ist eine Wirkung auf ein Subjekt, das eine bestimmte Umweltbedingung erfüllt.
 
 Unter Umwelteinflüssen von \ac{Kfz} fallen \ac{ua}:
 \begin{itemize}
 	\item benötigte Flächen, für Infrastruktur, Parkplätze \ac{usw}
-	\item der Verbrauch von Stoffen um \ac{zb} Energie zu erzeugen oder Fahrbahnen zu enteisen
+	\item der Verbrauch von Stoffen um Energie für \ac{Kfz} zu erzeugen oder Betriebszustände für Fahrbahnen herzustellen
 	\item der Ausstoß von Gasen die \ac{zb} durch Verbrennung von Kraftstoff oder beim Laden einer Batterie entstehen
-	\item der Verlust von Betriebsmitteln wie \ac{zb} Öl und Kühlwasser durch Leckage von Systemen
-	\item der Ausstoß von festen Stoffe aus wie \ac{ua} Bremsstaub beim Bremsen oder Abrieb der Reifen
-	\item Wäre und Schall durch die Umwadlung von Energie oder Reibung von Komponenten die beim Betrieb des \ac{Kfz} entstehen
-	\item Licht von \ac{Kfz} zur Beleuchtung der Fahrbahn oder Absicherung der Verkehrsführung
+	\item der Verlust von Betriebsmitteln durch Leckage an Systemen
+	\item der Ausstoß von festen Stoffe wie \ac{ua} Bremsstaub oder Abrieb der Reifen der beim Bremsen entsteht
+	\item Wärme und Schall durch die Umwadlung von Energie oder Reibung von Komponenten die beim Betrieb des \ac{Kfz} entstehen
+	\item Licht zur Beleuchtung der Fahrbahn oder Absicherung der Verkehrsführung
 \end{itemize}
 
 
+\subsection{Feinstaub}
 
+Als Feinstaub bezeichnet man Teilchen in der Luft die nicht sofot zu Boden fliegen.
+\newline
+Feinstaub kann nicht mit dem bloßen Auge wargenommen werden.
 
 flüchtiger organischer Verbindungen (VOCs), \ac{NO}, \ac{CO} sowie dem Treibhausgas \ac{CO2} \ac{NOX}
 Reifenabrieb, Bodenerosionen und Staubaufwirbelung, erzeugen Autos zudem Feinstaub
@@ -164,10 +168,6 @@ verkehrslärm
 
 Altfahrzeuge werden nach der Basler Konvention und der Abfallverbringungsverordnung als gefährliche Abfälle eingestuft und dürfen nur in OECD-Länder exportiert werden. Dennoch gibt es immer wieder Berichte (zum Beispiel bei Frontal21[7] am 31. März 2015), dass nicht nur Gebrauchtfahrzeuge, sondern auch Altfahrzeuge aus Deutschland nach Afrika, Nahost und in östlich der EU gelegene Länder exportiert werden. Dort werden sie, obwohl sie sicherheitstechnisch und abgastechnisch nicht mehr den deutschen Anforderungen entsprechen, oft noch lange Zeit gefahren. Viele Zielländer des Exportes von Gebraucht- und/oder Altfahrzeugen haben inzwischen Einschränkungen oder Verbote erlassen, um den unkontrollierten Import von unsicheren und umweltschädlichen Fahrzeugen zu unterbinden.[8]
 
-
-\subsubsection{Feinstaubbelastung}
-Was ist eine Feinstaubbelastung?
-Durch natürliche Art oder menschliche erzeugt
 \subsubsection{Co2 Emissionen}
 Was ist \ac{CO2}?
 Was sind \ac{CO2} Emissionen?
