--- a/template/acronyms.tex
+++ b/template/acronyms.tex
@@ -1,5 +1,6 @@
 \section*{\fontsize{20}{0} \selectfont Abkürzungsverzeichnis}
 \begin{acronym}[]\itemsep0pt %der Parameter in Klammern sollte die längste Abkürzung sein. Damit wird der Abstand zwischen Abkürzung und Übersetzung festgelegt
+	\acroplural{Kfz}[Kfz]{Kraftfahrzeuge}
 	\acro{Kfz}{\textit{Kraftfahrzeug}}
 	\acro{Nfz}{\textit{Nutzfahrzeug}}
 	\acro{Pkw}{\textit{Personenkraftwagen}}
