--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -1,34 +1,21 @@
 \chapter{Einleitung der Arbeit}
 
-\section{Hintergrund und Ausgangssituation}
+\section{Hintergrund und AusgangssituatioN}
 
-Seit einigen Jahren hat sich die Welt in das Digitale geändert. Die Kommunikation untereinander geschieht schneller denn je. 
-Meetings werden virtuell veranstaltet und Tätigkeiten digital erledigt. In der aktuellen Lage wird nunmehr erkannt, wie wichtig es ist, mit Computern und ohne direkten Kontakt zu arbeiten.
-Dies führt in einigen Branchen dazu, dass vermehrt Systeme zum Einsatz kommen, die ihre Arbeit selbst verrichten. Zunächst sollen diese Systeme die Arbeit vereinfachen und sicherer gestalten.
-Jedoch sehen Unternehmen in der Künstlichen Intelligenz ein größeres Potenzial. Sie soll einen Umbruch herbeiführen, welches Produktionsketten verschnellert und Kosten senken soll. Fortgeschrittene Unternehmen
-setzen Instrumente der Künstliche Intelligenz in verschiedenen Abteilungen ein.
+Seit einigen Jahren hat sich die Welt in das Digitale geändert. Immer mehr Unternehmen streben einen optimierten und einwandfreien Prozesszyklus an. Hierbei wird meistens zu Maschinen oder Systemen
+gegriffen, welche individuell auf das Unternehmenskonzept angepasst und entwickelt werden. Die aktuelle Pandemielage zeigt auch, wie wichtig es ist, mit Computersystemen und ohne direkten Kontakt zu arbeiten.
+Genau diesen Ansatz verfolgt man mit der Künstliche Intelligenz. Durch unterschiedliche Methoden wie Machine learning oder Deep learning versucht man die menschliche Intelligenz nachzuahmen. Dadurch sollen in vielen
+Branchen, dass Arbeiten ohne bzw. geringem Personal möglich sein. Für Unternehmen birgt die Künstliche Intelligenz große Chancen. Auf der einen Seite soll sie Personalkosten verringern, auf der anderen Prozessketten
+optimieren. Eine handvoll Mitarbeiter sollen die Maschinen verfolgen, warten und kontrollieren, den Rest verrichtet die Künstliche Intelligenz selber. Für eine 
+reibungslose Zusammenarbeit zwischen Mensch und KI wird das Personal entsprechend geschult. Neuanstellungen ohne das erforderliche Know-how werden für Arbeitnehmer 
+erschwert.   
+
 
 
 \section{Forschungsziel, Forschungsfrage und These}
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum.\footnote{Vgl. Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 558.} 
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. \footnote{Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 557.}
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum. 
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large. 
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes. 
-The built-in norms should, as far as possible, be understood and commonly shared.
-
-
+Mit dieser Arbeit soll eine detaillierte Untersuchung vorgenommen werden, welche die Risiken und Chancen für Arbeitnehmer und Arbeitgeber 
+hinter der Künstlichen Intelligenz abwägt. Darüber hinaus soll analysiert werden, welche Auswirkungen der Einsatz von KI auf den Arbeitsmarkt hat. 
 
 \section{Aufbau der Arbeit}
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum. \footnote{Vgl. Martínez-Díaz, M./Soriguera, F./Pérez, I., Autonomous driving: a bird's eye view, 2019, S. 563}
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
-At vero eos et accusam et justo duo dolores et ea rebum. 
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large. 
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes. 
-The built-in norms should, as far as possible, be understood and commonly shared.
